[gd_scene load_steps=5 format=3 uid="uid://4gwobhhnk0gt"]

[ext_resource type="Script" path="res://main.gd" id="1_r2r8p"]
[ext_resource type="PackedScene" uid="uid://d028lyb2oo21u" path="res://scenes/SearchBar/Searchbar.tscn" id="2_k73jh"]
[ext_resource type="PackedScene" uid="uid://cafkijt5lnmy7" path="res://scenes/TreeView/TreeView.tscn" id="3_a7dv6"]
[ext_resource type="PackedScene" uid="uid://dhe3dn7chs1sk" path="res://scenes/ImagePreview/ImagePreview.tscn" id="4_qsxuy"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r2r8p")

[node name="FileDialog" type="FileDialog" parent="."]
initial_position = 2
title = "Open a Directory"
size = Vector2i(800, 450)
ok_button_text = "Select Current Folder"
cancel_button_text = "Annulla"
file_mode = 2
access = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Searchbar" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("2_k73jh")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Seleziona una cartella"

[node name="HBoxContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TreeView" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_a7dv6")]
layout_mode = 2
size_flags_stretch_ratio = 4.0

[node name="ImagePreview" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_qsxuy")]
layout_mode = 2

[connection signal="dir_selected" from="FileDialog" to="." method="_on_select_directory"]
[connection signal="filter" from="MarginContainer/VBoxContainer/HBoxContainer2/Searchbar" to="." method="_on_filter"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="file_selected" from="MarginContainer/VBoxContainer/HBoxContainer/TreeView" to="." method="show_image"]
